kubernetes/uptime-kuma/endpoint-slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: uptime-kuma-external
  namespace: monitoring
  labels:
    kubernetes.io/service-name: uptime-kuma-external
addressType: IPv4
ports:
  - port: 3001
endpoints:
  - addresses:
      - "10.0.4.228"  # Docker host IP
