kubernetes/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-external
  namespace: monitoring
spec:
  ports:
    - port: 3001
      targetPort: 3001
