kubernetes/uptime-kuma/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptimekuma.int.bollingnet.net`)
      kind: Rule
      services:
        - name: uptime-kuma-external
          port: 3001
  tls:
    secretName: tls-uptime-kuma
